@@ -5184,3 +5184,218 @@ const bool Client::IsMQExemptedArea(int32 zoneID, float x, float y, float z) con
 	}
 	return false;
 }
+
+void Client::SendRewards()
+{
+	std::vector<ClientReward> rewards;
+	char errbuf[MYSQL_ERRMSG_SIZE];
+	char* query = 0;
+	MYSQL_RES *result;
+	MYSQL_ROW row;
+
+	if(database.RunQuery(query,MakeAnyLenString(&query,"SELECT reward_id, amount FROM"
+		" account_rewards WHERE account_id=%i ORDER by reward_id", AccountID()),
+		errbuf,&result)) 
+	{
+		while((row = mysql_fetch_row(result))) 
+		{
+			ClientReward cr;
+			cr.id = atoi(row[0]);
+			cr.amount = atoi(row[1]);
+			rewards.push_back(cr);
+		}
+		mysql_free_result(result);
+		safe_delete_array(query);
+	}
+	else
+	{
+		LogFile->write(EQEMuLog::Error, "Error in Client::SendRewards(): %s (%s)", query, errbuf);
+		safe_delete_array(query);
+		return;
+	}
+
+	if(rewards.size() > 0)
+	{
+		EQApplicationPacket *vetapp = new EQApplicationPacket(OP_VetRewardsAvaliable, (sizeof(InternalVeteranReward) * rewards.size()));
+		uchar *data = vetapp->pBuffer;
+		for(int i = 0; i < rewards.size(); ++i)
+		{
+			InternalVeteranReward *ivr = (InternalVeteranReward*)data;
+			ivr->claim_id = rewards[i].id;
+			ivr->number_available = rewards[i].amount;
+			list<InternalVeteranReward>::iterator iter = zone->VeteranRewards.begin();
+			while(iter != zone->VeteranRewards.end())
+			{
+				if((*iter).claim_id == rewards[i].id)
+				{
+					break;
+				}
+				iter++;
+			}
+
+			if(iter != zone->VeteranRewards.end())
+			{
+				InternalVeteranReward ivro = (*iter);
+				ivr->claim_count = ivro.claim_count;
+				for(int x = 0; x < ivro.claim_count; ++x)
+				{
+					ivr->items[x].item_id = ivro.items[x].item_id;
+					ivr->items[x].charges = ivro.items[x].charges;
+					strcpy(ivr->items[x].item_name, ivro.items[x].item_name);
+				}
+			}
+
+			data += sizeof(InternalVeteranReward);
+		}
+		FastQueuePacket(&vetapp);
+	}
+}
+
+bool Client::TryReward(int32 claim_id)
+{
+	//Make sure we have an open spot
+	//Make sure we have it in our acct and count > 0
+	//Make sure the entry was found
+	//If we meet all the criteria:
+	//Decrement our count by 1 if it > 1 delete if it == 1
+	//Create our item in bag if necessary at the free inv slot
+	//save
+	int32 free_slot = 0xFFFFFFFF;
+
+	for(int i = 22; i < 30; ++i)
+	{
+		ItemInst *item = GetInv().GetItem(i);
+		if(!item)
+		{
+			free_slot = i;
+			break;
+		}
+	}
+
+	if(free_slot == 0xFFFFFFFF)
+	{
+		return false;
+	}
+
+	char errbuf[MYSQL_ERRMSG_SIZE];
+	char* query = 0;
+	MYSQL_RES *result;
+	MYSQL_ROW row;
+	int32 amt = 0;
+
+	if(database.RunQuery(query,MakeAnyLenString(&query,"SELECT amount FROM"
+		" account_rewards WHERE account_id=%i AND reward_id=%i", AccountID(), claim_id),
+		errbuf,&result)) 
+	{
+		row = mysql_fetch_row(result);
+		if(row)
+		{
+			amt = atoi(row[0]);
+		}
+		else
+		{
+			mysql_free_result(result);
+			safe_delete_array(query);
+			return false;
+		}
+		mysql_free_result(result);
+		safe_delete_array(query);
+	}
+	else
+	{
+		LogFile->write(EQEMuLog::Error, "Error in Client::TryReward(): %s (%s)", query, errbuf);
+		safe_delete_array(query);
+		return false;
+	}
+
+	if(amt == 0)
+	{
+		return false;
+	}
+
+	list<InternalVeteranReward>::iterator iter = zone->VeteranRewards.begin();
+	while(iter != zone->VeteranRewards.end())
+	{
+		if((*iter).claim_id == claim_id)
+		{
+			break;
+		}
+		iter++;
+	}
+
+	if(iter == zone->VeteranRewards.end())
+	{
+		return false;
+	}
+
+	if(amt == 1)
+	{
+		if(!database.RunQuery(query,MakeAnyLenString(&query,"DELETE FROM"
+			" account_rewards WHERE account_id=%i AND reward_id=%i", AccountID(), claim_id),
+			errbuf)) 
+		{
+			LogFile->write(EQEMuLog::Error, "Error in Client::TryReward(): %s (%s)", query, errbuf);
+			safe_delete_array(query);
+		}
+		else
+		{
+			safe_delete_array(query);
+		}
+	}
+	else
+	{
+		if(!database.RunQuery(query,MakeAnyLenString(&query,"UPDATE account_rewards SET amount=(amount-1)"
+			" WHERE account_id=%i AND reward_id=%i", AccountID(), claim_id),
+			errbuf)) 
+		{
+			LogFile->write(EQEMuLog::Error, "Error in Client::TryReward(): %s (%s)", query, errbuf);
+			safe_delete_array(query);
+		}
+		else
+		{
+			safe_delete_array(query);
+		}
+	}
+
+	InternalVeteranReward ivr = (*iter);
+	ItemInst *claim = database.CreateItem(ivr.items[0].item_id, ivr.items[0].charges);
+	if(claim)
+	{
+		bool lore_conflict = false;
+		if(CheckLoreConflict(claim->GetItem()))
+		{
+			lore_conflict = true;
+		}
+
+		for(int y = 1; y < 8; y++)
+		{
+			if(ivr.items[y].item_id)
+			{
+				ItemInst *item_temp = database.CreateItem(ivr.items[y].item_id, ivr.items[y].charges);
+				if(item_temp)
+				{
+					if(CheckLoreConflict(item_temp->GetItem()))
+					{
+						lore_conflict = true;
+					}
+					claim->PutItem(y-1, *item_temp);
+				}
+			}
+		}
+
+		if(lore_conflict)
+		{
+			Message_StringID(0, PICK_LORE);
+			safe_delete(claim);
+			return true;
+		}
+		else
+		{
+			PutItemInInventory(free_slot, *claim);
+			SendItemPacket(free_slot, claim, ItemPacketTrade);
+		}
+	}
+
+	Save();
+	return true;
+}
