@@ -934,6 +934,7 @@ bool Zone::Init(bool iStaticZone) {
 	zone->LoadActiveAdventures();
 	zone->LoadLDoNTraps();
 	zone->LoadLDoNTrapEntries();
+	zone->LoadVeteranRewards();
 
 
 	//Load AA information
@@ -997,8 +998,7 @@ void Zone::ReloadStaticData() {
 	
 	entity_list.RemoveAllDoors();
 	zone->LoadZoneDoors(zone->GetShortName(), zone->GetInstanceVersion());
-
-	zone->LoadBlockedSpells(zone->GetZoneID());
+	zone->LoadVeteranRewards();
 	
 	//load the zone config file.
 	if (!LoadZoneCFG(zone->GetShortName(), true)) // try loading the zone name...
@@ -2471,5 +2471,60 @@ void Zone::LoadLDoNTrapEntries()
 		LogFile->write(EQEMuLog::Error, "Error in Zone::LoadLDoNTrapEntries: %s (%s)", query, errbuf);
 		safe_delete_array(query);
 		return;
+	}
+}
+
+void Zone::LoadVeteranRewards()
+{
+	VeteranRewards.clear();
+	char errbuf[MYSQL_ERRMSG_SIZE];
+	char* query = 0;
+	MYSQL_RES *result;
+	MYSQL_ROW row;
+	InternalVeteranReward current_reward;
+	int8 idx = 0;
+
+	current_reward.claim_id = 0;
+	
+
+	if(database.RunQuery(query,MakeAnyLenString(&query,"SELECT claim_id, name, item_id, charges FROM"
+		" veteran_reward_templates WHERE reward_slot < 8 and claim_id > 0 ORDER by claim_id, reward_slot"),
+		errbuf,&result)) 
+	{
+		while((row = mysql_fetch_row(result))) 
+		{
+			int32 claim = atoi(row[0]);
+			if(claim != current_reward.claim_id)
+			{
+				if(current_reward.claim_id != 0)
+				{
+					current_reward.claim_count = idx;
+					current_reward.number_available = 1;
+					VeteranRewards.push_back(current_reward);
+				}
+				idx = 0;
+				memset(&current_reward, 0, sizeof(InternalVeteranReward));
+				current_reward.claim_id = claim;
+			}
+
+			strcpy(current_reward.items[idx].item_name, row[1]);
+			current_reward.items[idx].item_id = atoi(row[2]);
+			current_reward.items[idx].charges = atoi(row[3]);
+			idx++;
+		}
+
+		if(current_reward.claim_id != 0)
+		{
+			current_reward.claim_count = idx;
+			current_reward.number_available = 1;
+			VeteranRewards.push_back(current_reward);
+		}
+		mysql_free_result(result);
+		safe_delete_array(query);
+	}
+	else
+	{
+		LogFile->write(EQEMuLog::Error, "Error in Zone::LoadVeteranRewards: %s (%s)", query, errbuf);
+		safe_delete_array(query);
 	}
 }
